# nanda-servers

./: .gitignore  README.md
MCP_news/: README.md  build.sh  news.py  requirements.txt  run.sh  tool response.txt  valid_inputs.txt
mcp-42os/: README.md  main.py  requirements.txt
mcp-anymile-server/: README.md  main.py  pyproject.toml
mcp-arxiv-helper/: README.md  main.py  paper_store.py  prompting.md  pyproject.toml  requirements.txt  run.sh
mcp-calculator-server/: README.md
mcp-calculator-server/src/: calc.ts
mcp-compare-zipcodes/: README.md
mcp-geolocation/: README.md  main.py  requirements.txt  run.sh
mcp-latex-pdf/: README.md  main.py  pyproject.toml  server.py
mcp-latex-pdf/covercraft/: README.md
mcp-latex-pdf/tools/: mcp_tools.py
mcp-linkedin-jobs/: LICENSE  README.md  TODO.md  package.json  tsconfig.json
mcp-linkedin-jobs/src/: index.ts
mcp-nutrition/: README.md  mcp_nutri.py  run.sh
mcp-server-hyperskill/: README.md  main.py  pyproject.toml
mcp-setup-helper/: README.md  server.py
mcp-synthetic-data-generator/: README.md  Synthetic_customers-100-masked.csv  requirements.txt  server.py
mcp-web-crawler/: README.md  main.py  pyproject.toml  server.py
mcp-web-crawler/covercraft/: README.md
mcp-web-crawler/tools/: mcp_tools.py
mylife-mcp-server/: README.md  requirements.txt  run.sh  server.py
nexonco-mcp/: .dockerignore  Dockerfile  README.md  pyproject.toml
office-supplies-shop-server/: README.md  build.sh  requirements.txt  run.sh  server.py
ssi-wallet-interface-server/: .env-example  README.md
(+24 files in other folders)
